@@ -152,6 +152,10 @@ int SwitchTrigger(short itemNumber, short timer)
 	}
 	else if (item->Status)
 	{
+		if (item->ObjectNumber == ID_AIRLOCK_SWITCH &&
+			item->Animation.AnimNumber == GetAnimNumber (*item, 2) &&
+			item->Animation.FrameNumber == GetFrameNumber (item, 0))
+			return 1;
 		return (item->Flags & ONESHOT) >> 8;
 	}
 	else
